--- a/spark_sight/create_charts/assets/dash_poc.css
+++ b/spark_sight/create_charts/assets/dash_poc.css
@@ -1,12 +1,25 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 /* Hide scrollbar */
 #id-fig-memory-row {
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
+    /* Internet Explorer, Edge */
+    -ms-overflow-style: none;
+    /* for Firefox */
+    scrollbar-width: none;
 }
 #id-fig-memory-row::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
+    /* for Chrome, Safari, and Opera */
+    display: none;
+}
+
+*[class="output-example-loading"][data-dash-is-loading="true"]{
+    visibility: hidden;
+}
+*[class="output-example-loading"][data-dash-is-loading="true"]::before{
+    content: "wiiiiiiiiiiiiiiiiiiiiii";
+    display: inline-block;
+    color: magenta;
+    visibility: visible;
 }
